--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
+/** Default Styles **/
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+/** Page Styles **/
+
+/* Import Oleo Script */
+@import url("https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap");
+
+/* Header Styles */
+header {
+    background-color: #25242c;
+    display: flex;
+    flex-direction: row;
+    min-height: 55px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.app-title {
+    color: white;
+    font-size: 24px;
+    margin-left: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.app-logo-container {
+    border-radius: 100px;
+    background: linear-gradient(225deg, #f2c94c 0%, #eb5757 100%);
+    height: 35px;
+    width: 35px;
+    display: inline-block;
+}
+
+.app-logo {
+    color: white;
+    padding: 4px 0px 0px 5px;
+}
+
+.app-name {
+    font-family: "Oleo Script";
+    color: white;
+    margin-left: 0.75rem;
+}
+
+#header-nav {
+    margin-right: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#header-nav * {
+    margin: 0 0.5rem 0 0.5rem;
+}
+
+.header-icon {
+    color: white;
+    width: 28px;
+    height: 28px;
+}
+
+.header-icon:hover {
+    cursor: pointer;
+}
+
+.header-button {
+    width: 65px;
+    height: 28px;
+    border-radius: 5px;
+    border: none;
+    color: white;
+}
+
+.header-button:hover {
+    cursor: pointer;
+}
+
+.signup-button {
+    background: #2F80ED;
+}
+
+.login-button {
+    background: #eb5757;
 }
