--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,11 @@ code {
     --color-purple-dark: #964CC3;
 }
 
+.page-container {
+    min-height: 100vh;
+    background: var(--bg-color-primary);
+}
+
 /* Import Oleo Script */
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap");
 
@@ -55,6 +60,7 @@ header {
     min-height: 55px;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .app-title {
@@ -135,6 +141,11 @@ header {
 .login-button:hover {
   background: var(--color-red-dark);
 }
+
+/* .login-button span {
+    position: relative;
+    bottom: 1px;
+} */
 
 .login-icon  {
     font-size: 14px;
