--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ code {
     /* Background Definitions */
     --bg-color-primary: #c9c9c9;
 
+    /* Text Color */
+    --text-color-primary: black;
+    --text-color-secondary: #4f4f4f;
+
     /* Color Definitions */
     --color-black: black;
     --color-black-hover: #151515;
@@ -106,6 +110,7 @@ header {
 
 .header-nav-element {
     margin: 0 0.5rem 0 0.5rem;
+    transition: all 0.2s ease 0s;
 }
 
 .header-icon {
@@ -213,6 +218,148 @@ header {
     margin: 0 0 1.5rem 0;
 }
 
+.home-button {
+    width: 70px;
+    height: 33px;
+    border-radius: 5px;
+    border: none;
+    color: var(--header-text-color);
+    margin: 0 1rem 0 1rem;
+    transition: all 0.2s ease 0s;
+
+    font-size: 12px;
+}
+
+.home-button.login-button {
+    position: relative;
+    top: 1px;
+}
+
+.home-button:hover {
+    cursor: pointer;
+}
+
+.home-button span {
+    font-size: 14px;
+    font-weight: 500;
+}
+
 footer .app-name {
     font-size: 56px;
+}
+
+/** Homepage Styles **/
+.body-login {
+    background: linear-gradient(258.68deg, #f2994a 0%, #9b51e0 100%), #2f80ed;
+    min-height: calc(100vh - 55px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.login-container {
+    background-color: white;
+    width: 300px;
+    height: 380px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 30px;
+}
+
+.login-content h1 {
+    font-weight: 900;
+    font-size: 24px;
+    width: fit-content;
+    margin: 0 auto 1rem auto;
+}
+
+.login-form {
+    display: grid;
+    grid-template-columns: repeat(2, 150px);
+    grid-template-rows: repeat(5, 30px);
+    grid-row-gap: 0.5rem;
+}
+
+.login-form label {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--text-color-secondary);
+    align-self: end;
+}
+
+#username-label {
+    grid-column: 1/3;
+    grid-row: 1;
+}
+
+#username {
+    grid-column: 1/3;
+    grid-row: 2;
+}
+
+#password-label {
+    grid-column: 1/3;
+    grid-row: 3;
+}
+
+#password {
+    grid-column: 1/3;
+    grid-row: 4;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 0 0.75rem 0 0.75rem;
+
+    width: 306px;
+    height: 36px;
+    left: 807px;
+    top: 351px;
+
+    background: #ffffff;
+    border: 1px solid #828282;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+#login-submit {
+    height: 40px;
+    grid-column: 1/3;
+    grid-row: 5;
+    margin-top: 30px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    border: none;
+    background: var(--color-blue);
+    transition: all 0.2s ease 0s;
+    color: white;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+#login-submit:hover {
+    background: var(--color-blue-dark);
+    cursor: pointer;
+}
+
+#signup-link,
+#signup-link:visited {
+    font-weight: 800;
+    font-size: 16px;
+    color: var(--text-color-primary);
+    text-decoration: none;
+    transition: all 0.2s ease 0s;
+}
+
+#signup-link:hover {
+    color: var(--text-color-secondary);
 }
