--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ header {
     align-items: center;
     justify-content: space-between;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+    z-index: 10;
 }
 
 .app-title {
@@ -248,7 +249,7 @@ footer .app-name {
     font-size: 56px;
 }
 
-/** Homepage Styles **/
+/** Login Page Styles **/
 .body-login {
     background: linear-gradient(258.68deg, #f2994a 0%, #9b51e0 100%), #2f80ed;
     min-height: calc(100vh - 55px);
@@ -361,5 +362,141 @@ footer .app-name {
 }
 
 #signup-link:hover {
+    color: var(--text-color-secondary);
+}
+
+/** Signup Page Styles **/
+.body-signup {
+    background: linear-gradient(258.68deg, #f2994a 0%, #9b51e0 100%), #2f80ed;
+    min-height: calc(100vh - 55px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.signup-container {
+    background-color: white;
+    width: 300px;
+    height: 500px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 30px;
+}
+
+.signup-content h1 {
+    font-weight: 900;
+    font-size: 24px;
+    width: fit-content;
+    margin: 0 auto 1rem auto;
+}
+
+.signup-form {
+    display: grid;
+    grid-template-columns: repeat(2, 150px);
+    grid-template-rows: repeat(9, 30px);
+    grid-row-gap: 0.5rem;
+}
+
+.signup-form label {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--text-color-secondary);
+    align-self: end;
+}
+
+#signup-username-label {
+    grid-column: 1/3;
+    grid-row: 1;
+}
+
+#signup-username {
+    grid-column: 1/3;
+    grid-row: 2;
+}
+
+#signup-email-label {
+    grid-column: 1/3;
+    grid-row: 3;
+}
+
+#signup-email {
+    grid-column: 1/3;
+    grid-row: 4;
+}
+
+#signup-password-label {
+    grid-column: 1/3;
+    grid-row: 5;
+}
+
+#signup-password {
+    grid-column: 1/3;
+    grid-row: 6;
+}
+
+#signup-confirm-password-label {
+    grid-column: 1/3;
+    grid-row: 7;
+}
+
+#signup-confirm-password {
+    grid-column: 1/3;
+    grid-row: 8;
+}
+
+.signup-form input[type="text"],
+.signup-form input[type="password"] {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 0 0.75rem 0 0.75rem;
+
+    width: 306px;
+    height: 36px;
+    left: 807px;
+    top: 351px;
+
+    background: #ffffff;
+    border: 1px solid #828282;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+#signup-submit {
+    height: 40px;
+    grid-column: 1/3;
+    grid-row: 9;
+    margin-top: 30px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    border: none;
+    background: var(--color-blue);
+    transition: all 0.2s ease 0s;
+    color: white;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+#signup-submit:hover {
+    background: var(--color-blue-dark);
+    cursor: pointer;
+}
+
+#login-link,
+#login-link:visited {
+    font-weight: 800;
+    font-size: 16px;
+    color: var(--text-color-primary);
+    text-decoration: none;
+    transition: all 0.2s ease 0s;
+}
+
+#login-link:hover {
     color: var(--text-color-secondary);
 }
