--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -50,6 +50,7 @@ header {
   align-items: center;
   justify-content: space-between;
   font-size: 16px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
 
   height: 30px;
 }
@@ -106,7 +107,7 @@ footer {
   font-size: 9px;
 
   width: 100vw;
-  height: 15px;
+  height: 20px;
   position: fixed;
   bottom: 0;
 }
