--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -9,12 +9,15 @@
 /* Variable Declarations */
 :root {
   --note-background-primary: white;
+  --note-header-text-color: #333333;
+  --note-text-color-primary: #828282;
 
   /* Color Definitions */
   --color-black: black;
   --color-black-hover: #151515;
   --color-white: white;
   --color-white-hover: #ededed;
+  --color-grey: #A1A1A1;
 
   --color-red: #eb5757;
   --color-red-dark: #cf4242;
@@ -30,58 +33,29 @@
   --color-purple-dark: #964cc3;
 }
 
+/* Quick Notes List Styles */
+
 .quicknotes-list {
   display: flex;
   padding: 2rem;
 }
 
-.quicknote.new {
-  /* background-color: #67d7cc; */
-}
-
-.quicknote.new textarea {
-  border: none;
-  resize: none;
-  background-color: inherit;
-}
-
-.quicknote.new textarea:focus {
-  outline: none;
-}
-
-.save,
-.dark-mode-toggle {
-  background-color: #e1e1e1;
-  border: none;
-  border-radius: 15px;
-  padding: 5px 10px 5px 10px;
-  font-size: 12px;
-}
-
-.save:hover,
-.dark-mode-toggle:hover {
-  background-color: #ededed;
-  cursor: pointer;
-}
-
+/* General Quick Note Styles */
 .quicknote-header {
-  width: 100%;
+  width: 230.5px;
   height: 25px;
+  color: var(--note-header-text-color);
 
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   background-color: var(--color-red);
+  border-bottom: 1px solid #828282;
 }
 
 .quicknote-name {
   margin-left: .5rem;
-}
-
-.quicknote > *,
-.quicknote-content > * {
-  font-size: 13px;
 }
 
 .quicknote {
@@ -89,6 +63,16 @@
   margin: 0 10px 10px 10px;
   width: 230px;
   height: 200px;
+
+  font-size: 13px;
+  font-family: 'Source Sans Pro', sans-serif !important;
+  border: 1px solid #828282;
+}
+
+.quicknote textarea {
+  font-size: 13px;
+  font-family: 'Source Sans Pro', sans-serif !important;
+  color: var(--note-text-color-primary);
 }
 
 .quicknote-content {
@@ -97,6 +81,8 @@
   justify-content: space-between;
   white-space: pre-wrap; /* keep spacing added to text */
   padding: 0.5rem;
+  color: var(--note-text-color-primary);
+  
 
   height: calc(100% - 25px - 1rem);
 }
@@ -112,5 +98,38 @@
 }
 
 .delete-icon {
+  transition: color 0.2s ease 0s;
+}
+
+.delete-icon:hover {
   cursor: pointer;
+  color: var(--color-red-dark);
+}
+
+/* New Quick Note Styles */
+.quicknote.new .quicknote-header  {
+  background-color: var(--color-grey);
+}
+
+.quicknote.new textarea {
+  border: none;
+  resize: none;
+  background-color: inherit;
+}
+
+.quicknote.new textarea:focus {
+  outline: none;
+}
+
+.add-quicknote-button {
+  border: none;
+  background-color: rgb(0,0,0,0);
+  color: var(--note-text-color-primary);
+  font-size: 14px;
+  transition: color 0.2s ease 0s;
+}
+
+.add-quicknote-button:hover {
+  cursor: pointer;
+  color: var(--color-blue-dark);
 }
