--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -12,6 +12,9 @@
   --header-bg-color-hover: #3e3d44;
   --header-text-color-primary: white;
 
+  --scrollbar-color-primary: #4d4c52;
+  --scrollbar-color-hover: #5f5e64;
+
   --background-color-primary: #e0e0e0;
 
   --text-color-primary: #333333;
@@ -40,6 +43,8 @@
 body {
   background-color: var(--background-color-primary);
   height: 100vh;
+  max-width: 100vw;
+  overflow: auto;
 }
 
 /* Header and Title Bar Styles */
@@ -53,6 +58,7 @@ header {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
 
   height: 30px;
+  z-index: 10;
 }
 
 #app-title {
@@ -97,6 +103,29 @@ header {
   font-size: 22px;
 }
 
+/* Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 100%;
+}
+
+::-webkit-scrollbar-track {
+  /* background: rgb(56, 56, 56);  */
+  background: none;
+  margin: 5px 0 5px 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-color-primary); 
+  transition: all 0.3s ease 0s;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollbar-color-hover); 
+  cursor: pointer;
+}
+
 /* Footer Styles */
 footer {
   background-color: var(--header-bg-color);
@@ -110,6 +139,7 @@ footer {
   height: 20px;
   position: fixed;
   bottom: 0;
+  z-index: 10;
 }
 
 #github-link {
