--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -36,8 +36,15 @@
 /* Quick Notes List Styles */
 
 .quicknotes-list {
-  display: flex;
-  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 220px;
+  padding: 1rem;
+  height: calc(100vh - 80px);
+  max-width: 100vw;
+  overflow: auto;
+
+  z-index: 1;
 }
 
 /* General Quick Note Styles */
