--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -71,6 +71,8 @@
   width: 230px;
   height: 200px;
 
+  justify-self: center;
+
   font-size: 13px;
   font-family: 'Source Sans Pro', sans-serif !important;
   border: 1px solid #828282;
