--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -37,7 +37,8 @@
 
 .quicknotes-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+  grid-template-columns: repeat(auto-fit, 250px);
   grid-auto-rows: 220px;
   padding: 1rem;
   height: calc(100vh - 80px);
