--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -40,7 +40,7 @@
   /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
   grid-template-columns: repeat(auto-fit, 250px);
   grid-auto-rows: 220px;
-  padding: 1rem;
+  padding: 2rem 1.25rem 1rem 1.25rem;
   height: calc(100vh - 80px);
   max-width: 100vw;
   overflow: auto;
@@ -62,8 +62,8 @@
   border-bottom: 1px solid #828282;
 }
 
-.quicknote-name {
-  margin-left: .5rem;
+.quicknote-name, .quicknote-title-input {
+  margin: 0 .5rem 0 .5rem;
 }
 
 .quicknote {
@@ -119,6 +119,18 @@
 /* New Quick Note Styles */
 .quicknote.new .quicknote-header  {
   background-color: var(--color-grey);
+}
+
+.quicknote-title-input {
+  border: none;
+  background-color: inherit;
+  font-size: 13px;
+  font-family: 'Source Sans Pro', sans-serif;
+  width: 100%;
+}
+
+.quicknote-title-input:focus {
+  outline: none;
 }
 
 .quicknote.new textarea {
