--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -67,6 +67,7 @@
   width: 100%;
   height: 25px;
   color: var(--note-header-text-color);
+  font-weight: 600;
 
   display: flex;
   align-items: center;
@@ -87,6 +88,7 @@
   font-size: 13px;
   font-family: 'Source Sans Pro', sans-serif !important;
   color: var(--note-text-color-primary);
+  font-weight: 500;
 }
 
 .quicknote-content {
@@ -96,6 +98,7 @@
   white-space: pre-wrap; /* keep spacing added to text */
   padding: 0.5rem;
   color: var(--note-text-color-primary);
+  font-weight: 500;
   
   border: 1px solid #828282;
   height: calc(100% - 25px - 1rem);
