--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -34,6 +34,8 @@
   --color-blue-dark: #2c62cd;
   --color-purple: #bb6bd9;
   --color-purple-dark: #964cc3;
+  --color-pink: #f035a5;
+  --color-cyan: #31C6DA;
 }
 
 /* Quick Notes List Styles */
@@ -179,16 +181,14 @@
 }
 
 .color-menu-wrapper {
-  width: 500px;
-  height: 300px;
+  width: 260px;
+  height: fit-content;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.4);
   background: #fff;
   color: #000;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   position: relative;
   z-index: 10;
-  padding: 1rem;
+  padding: 1rem 1rem 1.5rem 1rem;
 }
 
 .menu-header {
@@ -197,6 +197,8 @@
   justify-content: space-between;
   width: inherit;
   height: fit-content;
+
+  margin-bottom: 0.9rem;
 }
 
 .menu-close-button {
@@ -211,6 +213,7 @@
 .menu-title {
   margin: 0;
   font-size: 18px;
+  color: var(--note-header-text-color);
 }
 
 .color-menu-button {
@@ -226,4 +229,54 @@
 .color-menu-button:hover {
   cursor: pointer;
   color: var(--note-header-text-color-hover);
+}
+
+.color-menu-content {
+  display: grid;
+  grid-template-columns: repeat(4, 25px);
+  grid-column-gap: 1rem;
+  grid-template-rows: repeat(2, 25px);
+  grid-row-gap: 0.75rem;
+
+  width: fit-content;
+  margin: 0 auto 0 auto;
+}
+
+.color-option {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #828282;
+  cursor: pointer;
+}
+
+.red {
+  background: var(--color-red);
+}
+
+.orange {
+  background: var(--color-orange);
+}
+
+.yellow {
+  background: var(--color-yellow);
+}
+
+.green {
+  background: var(--color-green);
+}
+
+.blue {
+  background: var(--color-blue);
+}
+
+.purple {
+  background: var(--color-purple);
+}
+
+.pink {
+  background: var(--color-pink);
+}
+
+.cyan {
+  background: var(--color-cyan);
 }
