--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -12,6 +12,8 @@
   --header-bg-color-hover: #3e3d44;
   --header-text-color-primary: white;
 
+  --sidebar-bg-color: rgb(52, 51, 59);
+
   --scrollbar-color-primary: #4d4c52;
   --scrollbar-color-hover: #5f5e64;
 
@@ -39,7 +41,7 @@
   --color-purple-dark: #964cc3;
 }
 
-/* General Styles */
+/** General Styles **/
 body {
   background-color: var(--background-color-primary);
   height: 100vh;
@@ -47,12 +49,18 @@ body {
   overflow: auto;
 }
 
+.app-container {
+  display: flex;
+  flex-direction: row;
+}
+
 main {
+  flex: 1;
   height: calc(100vh - 50px);
   overflow: auto;
 }
 
-/* Header and Title Bar Styles */
+/** Header and Title Bar Styles **/
 header {
   background-color: var(--header-bg-color);
   color: var(--header-text-color-primary);
@@ -84,7 +92,7 @@ header {
 
 #app-title {
   font-family: "Oleo Script", sans-serif;
-  padding: 0 1rem 0 1.5rem;
+  padding: 0 0.75rem 0 0.75rem;
   height: 100%;
   display: flex;
   align-items: center;
@@ -149,30 +157,57 @@ header {
   font-size: 22px;
 }
 
-/* Scrollbar Styles */
-::-webkit-scrollbar {
-  width: 10px;
-  height: 100%;
+/** Sidebar Styles **/
+#sidebar {
+  background: var(--sidebar-bg-color);
+  height: calc(100vh - 50px);
+  width: 45px;
+  color: var(--header-text-color-primary);
+  z-index: 0;
 }
 
-::-webkit-scrollbar-track {
-  /* background: rgb(56, 56, 56);  */
-  background: none;
-  margin: 5px 0 5px 0;
+#sidebar nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
 }
 
-::-webkit-scrollbar-thumb {
-  background: var(--scrollbar-color-primary);
-  transition: all 0.3s ease 0s;
-  border-radius: 3px;
+#sidebar nav ul li {
+  width: 100%;
+  height: 45px;
+  font-size: 24px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background: var(--scrollbar-color-hover);
+.nav-button {
+  width: 45px;
+  height: 45px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  z-index: 1;
+}
+
+.nav-button:hover {
   cursor: pointer;
+  border-left: solid 2px var(--header-text-color-primary);
 }
 
-/* Footer Styles */
+.nav-icon {
+  position: relative;
+  right: 1px;
+}
+
+.settings-icon {
+  font-size: 23px;
+}
+
+/** Footer Styles **/
 footer {
   background-color: var(--header-bg-color);
   color: var(--header-text-color-primary);
@@ -190,7 +225,7 @@ footer {
 
 #github-link {
   margin-left: 0.5rem;
-  padding: 0 0.5rem 0 0.5rem;
+  padding: 0 0.4rem 0 0.4rem;
   height: 100%;
   transition: background-color 0.2s ease 0s;
 
@@ -215,4 +250,27 @@ footer {
 
 #cpy {
   margin-right: 1rem;
+}
+
+/* Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 100%;
+}
+
+::-webkit-scrollbar-track {
+  /* background: rgb(56, 56, 56);  */
+  background: none;
+  margin: 5px 0 5px 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-color-primary);
+  transition: all 0.3s ease 0s;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollbar-color-hover);
+  cursor: pointer;
 }
