--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -13,6 +13,7 @@
   --header-text-color-primary: white;
 
   --sidebar-bg-color: rgb(52, 51, 59);
+  --sidebar-bg-color-hover: rgb(73, 72, 78);
 
   --scrollbar-color-primary: #4d4c52;
   --scrollbar-color-hover: #5f5e64;
@@ -58,6 +59,10 @@ main {
   flex: 1;
   height: calc(100vh - 50px);
   overflow: auto;
+}
+
+.main-content-wrapper {
+  padding: 1.5rem 0 0 1.5rem;
 }
 
 /** Header and Title Bar Styles **/
@@ -171,6 +176,11 @@ header {
   padding: 0;
   margin: 0;
   width: 100%;
+  box-sizing: border-box;
+}
+
+#sidebar a, #sidebar a:visited {
+  color: white;
 }
 
 #sidebar nav ul li {
@@ -183,19 +193,33 @@ header {
   justify-content: center;
 }
 
-.nav-button {
+#sidebar nav ul li .nav-button, #sidebar nav ul li a {
   width: 45px;
   height: 45px;
   position: absolute;
+}
+
+#sidebar nav ul li a {
   display: flex;
   justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   z-index: 1;
 }
 
-.nav-button:hover {
+#sidebar nav ul li:hover {
+  background-color: var(--sidebar-bg-color-hover);
+  transition: background-color 0.2s ease-out 0s;
+}
+
+#sidebar nav ul li .nav-button {
+  border-left: solid 3px var(--sidebar-bg-color);
+}
+
+#sidebar nav ul li:hover .nav-button {
   cursor: pointer;
-  border-left: solid 2px var(--header-text-color-primary);
+  border-left: solid 3px var(--header-text-color-primary);
+  transition: all 0.2s ease 0s;
 }
 
 .nav-icon {
@@ -205,6 +229,12 @@ header {
 
 .settings-icon {
   font-size: 23px;
+}
+
+.selected {
+  border-left: solid 2px white !important;
+  background: var(--sidebar-bg-color-hover);
+  box-sizing: border-box;
 }
 
 /** Footer Styles **/
