feat: setup routes for marknote editors

--- a/client/src/css/marknotes.css
+++ b/client/src/css/marknotes.css
@@ -64,6 +64,11 @@
   cursor: pointer;
 }
 
+.marknote-link {
+  text-decoration: none;
+  
+}
+
 .marknote-header {
   width: 100%;
   height: 25px;
