--- a/client/src/css/marknotes.css
+++ b/client/src/css/marknotes.css
@@ -15,6 +15,10 @@
 
   --note-text-color-edit: #828282;
 
+  --editor-header-background-primary: #4b4a53;
+  --editor-header-background-hover: #636269;
+  --editor-header-text-color-primary: white;
+
   /* Color Definitions */
   --color-black: black;
   --color-black-hover: #151515;
@@ -35,7 +39,7 @@
   --color-purple: #bb6bd9;
   --color-purple-dark: #964cc3;
   --color-pink: #f035a5;
-  --color-cyan: #31C6DA;
+  --color-cyan: #31c6da;
 }
 
 /* Mark Notes List Styles */
@@ -66,7 +70,6 @@
 
 .marknote-link {
   text-decoration: none;
-  
 }
 
 .marknote-header {
@@ -122,4 +125,65 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+/** Editor Styles **/
+.editor-header {
+  background: var(--editor-header-background-primary);
+  color: var(--editor-header-text-color-primary);
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: -5;
+  box-sizing: border-box;
+  padding: 0 0 0 1rem;
+}
+
+.editor-header h1 {
+  margin-left: 1rem;
+  font-size: 16px;
+  margin: 0;
+  position: relative;
+  bottom: 1px;
+}
+
+.editor-header-buttons {
+  height: inherit;
+}
+
+.editor-header-buttons ul {
+  list-style: none;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+  height: inherit;
+}
+
+.editor-header-buttons ul li {
+  width: 40px;
+  height: 100%;
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.editor-header-buttons ul li:hover {
+  cursor: pointer;
+  background: var(--editor-header-background-hover);
+  transition: background-color 0.2s ease 0s;
+}
+
+.editor-header-buttons ul li a {
+  color: var(--editor-header-text-color-primary);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.editor-header-buttons ul li a:visited {
+  color: var(--editor-header-text-color-primary);
 }
