--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -15,6 +15,10 @@
   --sidebar-bg-color: rgb(52, 51, 59);
   --sidebar-bg-color-hover: rgb(73, 72, 78);
 
+  --sub-header-background-primary: #4b4a53;
+  --sub-header-background-hover: #636269;
+  --sub-header-text-color-primary: white;
+
   --scrollbar-color-primary: #4d4c52;
   --scrollbar-color-hover: #5f5e64;
 
@@ -179,7 +183,8 @@ header {
   box-sizing: border-box;
 }
 
-#sidebar a, #sidebar a:visited {
+#sidebar a,
+#sidebar a:visited {
   color: white;
 }
 
@@ -193,7 +198,8 @@ header {
   justify-content: center;
 }
 
-#sidebar nav ul li .nav-button, #sidebar nav ul li a {
+#sidebar nav ul li .nav-button,
+#sidebar nav ul li a {
   width: 45px;
   height: 45px;
   position: absolute;
@@ -233,8 +239,69 @@ header {
 
 .selected {
   border-left: solid 2px white !important;
-  background: var(--sidebar-bg-color-hover);
+  /* background: var(--sidebar-bg-color-hover); */
   box-sizing: border-box;
+}
+
+/** Sub-heading Styles **/
+.sub-header {
+  background: var(--sub-header-background-primary);
+  color: var(--sub-header-text-color-primary);
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: -5;
+  box-sizing: border-box;
+  padding: 0 0 0 1rem;
+}
+
+.sub-header h1 {
+  margin-left: 1rem;
+  font-size: 16px;
+  margin: 0;
+  position: relative;
+  bottom: 1px;
+}
+
+.sub-header-buttons {
+  height: inherit;
+}
+
+.sub-header-buttons ul {
+  list-style: none;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+  height: inherit;
+}
+
+.sub-header-buttons ul li {
+  width: 40px;
+  height: 100%;
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sub-header-buttons ul li:hover {
+  cursor: pointer;
+  background: var(--sub-header-background-hover);
+  transition: background-color 0.2s ease 0s;
+}
+
+.sub-header-buttons ul li a {
+  color: var(--sub-header-text-color-primary);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sub-header-buttons ul li a:visited {
+  color: var(--sub-header-text-color-primary);
 }
 
 /** Footer Styles **/
