--- a/client/src/css/marknotes.css
+++ b/client/src/css/marknotes.css
@@ -138,7 +138,7 @@
   border: 0;
   font-size: 16px;
   font-weight: bold;
-  padding: 1rem;
+  padding: 0 1rem 0 1rem;
 }
 
 .editor-title:focus {
@@ -164,6 +164,8 @@
   width: 100%;
   height: 100%;
   padding: 1rem;
+  border: none;
+  resize: none;
 }
 
 .editor-body:focus {
