--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -231,13 +231,14 @@
 
 .color-menu-content {
   display: grid;
-  grid-template-columns: repeat(4, 25px);
-  grid-column-gap: 1rem;
-  grid-template-rows: repeat(2, 25px);
-  grid-row-gap: 0.75rem;
+  grid-template-columns: repeat(4, 20px);
+  grid-column-gap: 1.25rem;
+  grid-template-rows: repeat(2, 20px);
+  grid-row-gap: 1rem;
 
   width: fit-content;
   margin: 0 auto 0 auto;
+  padding: 0 2rem 0 2rem;
 }
 
 .color-option {
