feat: change quicknotes so they are easier to edit and make new note behavior more consistent with rest of app

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -71,6 +71,10 @@ main {
   box-sizing: border-box;
 }
 
+input:focus {
+  outline: none;
+}
+
 /** Header and Title Bar Styles **/
 header {
   background-color: var(--header-bg-color);
