--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -138,23 +138,13 @@
   color: var(--note-text-color-edit);
 }
 
-.quicknote.add textarea:focus {
-  outline: none;
-}
-
-.add-quicknote-button, .delete-quicknote-button {
+.delete-quicknote-button {
   border: none;
   background-color: rgb(0, 0, 0, 0);
   color: var(--note-text-color-primary);
   height: fit-content;
   width: fit-content;
   padding: 0;
-}
-
-.add-quicknote-button:hover {
-  cursor: pointer;
-  color: var(--color-blue-dark);
-  transition: color 0.2s ease 0s;
 }
 
 .delete-quicknote-button:hover {
