--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -102,8 +102,10 @@ header {
   font-size: 16px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
 
+  position: relative;
+
   height: 30px;
-  z-index: 10;
+  z-index: 1000;
 }
 
 #header-drag {
@@ -348,7 +350,7 @@ footer {
   height: 20px;
   position: fixed;
   bottom: 0;
-  z-index: 10;
+  z-index: 1000;
 }
 
 #github-link {
@@ -414,6 +416,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .modal-menu-wrapper {
