--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -199,6 +199,10 @@ header {
   min-width: 45px;
   color: var(--header-text-color-primary);
   z-index: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #sidebar nav ul {
@@ -263,6 +267,8 @@ header {
 
 .settings-icon {
   font-size: 23px;
+  position: relative;
+  right: 0px;
 }
 
 .selected {
