--- a/client/src/css/marknotes.css
+++ b/client/src/css/marknotes.css
@@ -47,7 +47,7 @@
   grid-template-columns: repeat(auto-fit, 250px);
   grid-auto-rows: 150px;
   max-width: 100vw;
-
+  row-gap: 1rem;
   z-index: 1;
 }
 
@@ -62,18 +62,18 @@
 
   font-size: 13px;
   font-family: "Source Sans Pro", sans-serif !important;
-  cursor: pointer;
 }
 
 .marknote-link {
   text-decoration: none;
+  cursor: pointer;
 }
 
 .marknote-header {
   width: 100%;
   height: 25px;
   color: var(--note-header-text-color);
-  background: var(--color-blue);
+  background: var(--color-grey);
   font-weight: 600;
 
   display: flex;
@@ -86,16 +86,8 @@
   box-sizing: border-box;
 }
 
-.marknote-name,
-.marknote-title-input {
+.marknote-name {
   margin: 0 0.5rem 0 0.5rem;
-}
-
-.marknote textarea {
-  font-size: 13px;
-  font-family: "Source Sans Pro", sans-serif !important;
-  color: var(--note-text-color-primary);
-  font-weight: 500;
 }
 
 .marknote-content {
@@ -116,7 +108,7 @@
   height: 100%;
   display: block;
   word-wrap: break-word;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 .marknote-footer {
@@ -160,7 +152,8 @@
   box-sizing: border-box;
 }
 
-.editor-body, .preview-body {
+.editor-body,
+.preview-body {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -180,7 +173,7 @@
   flex: 1;
   box-sizing: border-box;
 
-  border-left: solid 20px #C4C4C4;
+  border-left: solid 20px #c4c4c4;
 }
 
 .preview-body {
